<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp"
    android:background="#FFF9C4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:id="@+id/calorie_item_text_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/brand_name"
            android:layout_marginEnd="2dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:textSize="14sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:id="@+id/calorie_item_brand_text_desc"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:text="@string/calorie_count"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textSize="14sp"
            android:layout_marginEnd="2dp"
            android:layout_marginStart="2dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:id="@+id/calorie_item_cal_text"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tint="#C51162"
        android:id="@+id/calorie_image_add_button"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:contentDescription="@string/calorie_add_cd"
        android:src="@drawable/ic_add_circle_black_24dp"
        android:background="@drawable/ripple_button_calorie_adder"
        android:layout_gravity="start"/>

</LinearLayout>