<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_view_map"
    android:orientation="vertical"
    android:background="@color/main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/map_button_linear">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:id="@+id/map_button_start"
                android:textColor="@android:color/black"
                android:background="@drawable/ripple_button_map"
                android:text="@string/map_start_run" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:id="@+id/map_button_stop"
                android:background="@drawable/ripple_button_map"
                android:textColor="@android:color/black"
                android:text="@string/map_stop_run" />

        </LinearLayout>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:layout_height="260dp"
            android:name="com.google.android.gms.maps.MapFragment" />

    </LinearLayout>

    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="4dp"
        android:background="@color/main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/map_distance"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                android:text="@string/map_distance_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/map_distance"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:textStyle="bold|italic"
                android:id="@+id/map_distance_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/map_time"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                android:layout_below="@id/map_distance"
                android:text="@string/map_time_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/map_time"
                android:layout_below="@id/map_distance"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:textStyle="bold|italic"
                android:id="@+id/map_time_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/map_calories"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="20sp"
                android:layout_below="@id/map_time"
                android:text="@string/calories_burnt_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/map_calories"
                android:layout_below="@id/map_time"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:textStyle="bold|italic"
                android:id="@+id/map_calories_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/map_speed"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/map_speed_label"
                android:layout_below="@+id/map_calories" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/map_speed"
                android:layout_below="@id/map_calories"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:textStyle="bold|italic"
                android:id="@+id/map_speed_text"
                android:textSize="16sp" />

        </RelativeLayout>


    </ScrollView>


</LinearLayout>


