<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/routine_display_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/routine_display_toolbar"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_height="?actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/routine_display_header"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:layout_margin="4dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_forever_white_36dp"
                android:layout_margin="8dp"
                android:id="@+id/routine_permanent_delete"
                android:contentDescription="@string/routine_permanent_delete_cd"
                android:background="#009688"
                android:layout_gravity="end" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_autorenew_white_36dp"
                android:layout_gravity="end"
                android:background="#009688"
                android:layout_margin="8dp"
                android:id="@+id/routine_uncheck_all"
                android:contentDescription="@string/routine_uncheck_cd" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mode_edit_white_36dp"
                android:layout_margin="8dp"
                android:background="#009688"
                android:id="@+id/routine_edit"
                android:contentDescription="@string/routine_edit_cd"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_alignParentEnd="true" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_routine_display">

    </ListView>

</LinearLayout>